--- a/index.html
+++ b/index.html
@@ -146,4 +146,8 @@
             <li>Malayalam</li>
         </ul>
     </body>
+    <hr />
+    <footer>
+        <p>© 2024 Rajaraman G. All rights reserved.</p>
+    </footer>
 </html>
